log/.ipynb_checkpoints/QSO_301776-checkpoint.err
  File "/home/schiarenza/DESI_X_BLAST/compute_cell_QSO_new.py", line 425
    if compute_coupled_cls:
    ^
IndentationError: expected an indented block
srun: error: cn052: task 0: Exited with exit code 1
